--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@ check_bnb.csv
 check_rpls.csv
 results_sorted.csv
 results_rd150_nb100.csv
-<<<<<<< HEAD
-
-=======
+results_rd150_nb100_score.csv
 RPLS2018.csv
 geo-rpls2017.csv
->>>>>>> master
