--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ RPLS2018.csv
 geo-rpls2017.csv
 results_rd150_nb100_score.csv
 static/donneesgeos/croisementBis.geojson
+static/donneesgeos/croisementBis.geojson
