renaming croismentBis to croisementBis2

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ results_rd155_nb250.csv
 results_rd150_nb100_score.csv
 static/donneesgeos/croisementBis.geojson
 static/donneesgeos/croisementBis.geojson
+static/donneesgeos/croisementBis2.geojson
